--- a/front/src/components/footer/footer.css
+++ b/front/src/components/footer/footer.css
@@ -1,17 +1,17 @@
-.Footer {
+.footer {
 	height: 274px;
     box-sizing: border-box;
     background-color: #292929;
     width: 100%;
 }
 
-.Footer img {
+.footer img {
     height: 28px;
     margin-bottom: 20px;
     margin-top: 35px;
 }
 
-.FooterBottom {
+.footer-btm {
     color: #fff;
     width: 100%;
     height: 90px;
@@ -22,14 +22,14 @@
     margin-top:50px;
 }
 
-.FooterBottom span {
+.footer-btm span {
     position: relative;
     top: 40%;
     font-size: 16px;
 }
 
-.FooterContent {
-    max-width: 1366px;
+.footer-container {
+    max-width: 1200px;
     width: 100%;
     margin: 0 auto;
     bottom: 50px;
@@ -38,13 +38,12 @@
     box-sizing: border-box;
 }
 
-.FooterSubContent {
+.footer-sub-container {
     display: flex;
     justify-content: space-between;
 }
 
-.FooterText {
-    font-family: 'YuGothic', sans-serif;
+.footer-text {
     display: block;
     color: #fff;
     width: 414px;
