--- a/front/src/components/nav/nav.css
+++ b/front/src/components/nav/nav.css
@@ -1,72 +1,52 @@
-.Toolbar {
-	max-width: 1366px;
-	height: 100px;
-	width: 100%;
-	margin: 0 auto;
-	top: 0;
-	left: 0;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	box-sizing: border-box;
+.navbar {
+  max-width: 1200px;
+  height: 100px;
+  width: 100%;
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
 }
 
-.Toolbar nav {
-	height: 100%;
+.navbar nav {
+  height: 100%;
 }
 
-.LogoContainer {
-	height: 80%;
+.logo {
+  height: 80%;
 }
 
-.Logo {
-    padding-top: 15px;
-	height: 100%;
-	box-sizing: border-box;
-	border-radius: 5px;
+.logo {
+  padding-top: 15px;
+  height: 100%;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 
-.Logo img {
-	height: 30px;
+.logo img {
+  height: 30px;
 }
 
-
-@media (max-width: 499px) {
-	.DesktopOnly {
-		display: none;
-	}
+.nav-items {
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  height: 100%;
 }
 
-.NavigationItems {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	display: flex;
-	flex-flow: column;
-	align-items: center;
-	height: 100%;
+.nav-items li {
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.2em;
+  font-size: 17px;
 }
 
-.NavigationItems li {
-    text-decoration: none;
-    box-sizing: border-box;
-    display: block;
-    color: #101010;
-    text-transform: uppercase;
-    font-weight: bold;
-	letter-spacing: 0.2em;
-	transition: all .2s ease-in;
+.nav-items li:hover {
+  cursor: pointer;
+  color: #6b6b6b;
 }
-
-
-.NavigationItems li:hover {
-	cursor: pointer;
-	color: #6b6b6b;
-}
-
-@media (min-width: 500px) {
-	.NavigationItems {
-		flex-flow: row;;
-	}
-}
-
