--- a/front/src/pages/auth/auth.css
+++ b/front/src/pages/auth/auth.css
@@ -1,21 +1,21 @@
-.Auth {
+.auth {
   margin: 20px auto;
   width: 460px;
   padding: 10px;
   box-sizing: border-box;
 }
 
-.Input {
+.input {
   display: block;
   font-size: 18px;
 }
 
-.Auth__form--btn-footer {
+.auth-form--btn-footer {
   text-align: center;
   margin-top: 30px;
 }
 
-.FormLabel {
+.form-label {
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 30px;
@@ -23,18 +23,7 @@
   transition: all 0.2s ease-in;
 }
 
-.ErrorMessage {
-  color: red;
-  font-size: 18px;
-}
-
-@media (min-width: 600px) {
-  .Auth {
-    width: 500px;
-  }
-}
-
-.Input input {
+.input input {
   height: 60px;
   width: 100%;
   border: 1px solid #101010;
@@ -42,29 +31,19 @@
   margin-top: 5px;
   box-sizing: border-box;
   font-size: 18px;
-  font-family: "Montserrat", sans-serif;
 }
 
-.Input label {
+.input label {
   text-align: left;
 }
 
-.Input span {
+.input span {
   font-size: 12px;
   margin-left: 10px;
   color: red;
 }
 
-.InputElement:focus {
-  outline: none;
-  transition: outline 0.2s ease-in;
-}
-
-.Invalid {
-  border: 1px solid red !important;
-}
-
-.Button {
+.button {
   background-color: transparent;
   border: none;
   color: white;
@@ -76,32 +55,27 @@
   letter-spacing: 1.2px;
 }
 
-.Button:first-of-type {
+.button:first-of-type {
   margin-left: 0;
   padding-left: 0;
 }
 
-.Button:disabled {
-  color: #ccc;
-  cursor: not-allowed;
-}
-
-.Primary {
+.primary {
   width: 100%;
   height: 70px;
   color: #fff;
   background: #101010;
 }
 
-.Primary:hover {
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.185), 0 15px 12px rgba(0, 0, 0, 0.164);
+.primary:hover {
+  opacity: 0.8;
   transition: all 0.5s ease-in-out;
 }
 
-.Secondary {
+.secondary {
   color: #101010;
   text-align: center;
 }
-.Secondary span {
+.secondary span {
   margin-left: 10px;
 }
