--- a/front/src/pages/home/home.css
+++ b/front/src/pages/home/home.css
@@ -1,21 +1,124 @@
 .auth-form {
-  -webkit-transition: max-height 0.5s ease-in;
-  transition: max-height 0.5s ease-in;
-  transition-timing-function: linear;
   max-height: 0;
   overflow-y: hidden;
 }
 
 .slider-section {
-  background-color: #101010;
-  height: 666px;
-  max-height: 666px;
+  background-color: black;
   margin-bottom: 100px;
-  display: block;
-  -webkit-transition: display 0.2s ease-in;
-  transition: display 0.2s ease-in;
 }
 
 .news-section {
   height: auto;
+}
+
+.slider {
+  width: 100%;
+  height: 670px;
+  overflow: hidden;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.slider img {
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  max-width: 100%;
+}
+
+.slider-arrows {
+  height: 50px;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider-arrows img {
+  width: 25px;
+  height: 35px;
+  display: block;
+  margin: 0 50px;
+}
+
+.slider-arrows img:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.slider-ellipses {
+  height: 50px;
+  width: 100%;
+  position: absolute;
+  bottom: 30px;
+  text-align: center;
+}
+
+.slider-ellipses ul {
+  list-style-type: none;
+}
+
+.slider-ellipses li {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+a.slider-ellipses--active {
+  background-color: black !important;
+}
+
+.slider-ellipses a {
+  height: 15px;
+  width: 15px;
+  background-color: white;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+.slider-ellipses a:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.slider-title-container {
+  font-family: "YuGothic", sans-serif;
+  font-size: 60px;
+  color: #fff;
+  width: 34%;
+  position: absolute;
+  right: 0;
+  top: -30px;
+  line-height: 1.5;
+  margin-top: 10px;
+}
+
+.slider-title-container > .slider-title {
+  background-color: #101010;
+  line-height: 1;
+  font-size: 3rem;
+}
+
+.slider-date {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: white;
+  display: block;
+  letter-spacing: 0.2em;
+}
+
+.slider-content {
+  height: 50px;
+  width: 100%;
+  position: absolute;
+  text-align: right;
+  right: 7%;
+  top: 35%;
+}
+
+.slider-.slider-title-container {
+  background: black;
+  position: absolute;
+  width: 30%;
 }
